--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p class="ADS">Automatic Driving School</p>
         <!-- <p class="slogan">No Gears - No Worries</p> -->
       </div>
-  <img src="Images/logo.png" alt="Let It Roll Logo" class="site-logo" />
+<img src="./Images/logo.png" alt="Let It Roll Logo" class="site-logo" />
+
 
       <div class="burger" id="burger">
         <div></div>
