--- a/pricing.html
+++ b/pricing.html
@@ -17,19 +17,21 @@
       <div class="header-content">
         <h1 class="site-title">Let It Roll</h1>
         <p class="ADS">Automatic Driving School</p>
-        <p class="slogan">No Gears - No Worries</p>
+        <!-- <p class="slogan">No Gears - No Worries</p> -->
       </div>
+<img src="Images/Logo.webp" alt="Let It Roll Logo" class="site-logo" />
       <div class="burger" id="burger">
         <div></div>
         <div></div>
         <div></div>
       </div>
     </header>
-      <nav class="nav-menu" id="nav-menu">
+    <nav class="nav-menu" id="nav-menu">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="first_lesson.html">Your First Lesson</a>
         <a href="pricing.html">Pricing</a>
+          <a href="photo_gallery.html">Successful Students</a>
         <a href="useful.html">Useful Links</a>
         <a href="terms.html">Terms &amp; Conditions</a>
       </nav>
