--- a/testimonials.html
+++ b/testimonials.html
@@ -17,8 +17,9 @@
       <div class="header-content">
         <h1 class="site-title">Let It Roll</h1>
         <p class="ADS">Automatic Driving School</p>
-        <p class="slogan">No Gears - No Worries</p>
+        <!-- <p class="slogan">No Gears - No Worries</p> -->
       </div>
+      <img src="Images/Logo.webp" alt="Let It Roll Logo" class="site-logo" />
       <div class="burger" id="burger">
         <div></div>
         <div></div>
