--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
     <!-- Floating FAQ Button (above WhatsApp) -->
     <button id="faq-btn" class="floating-btn faq-btn" aria-label="FAQ">
-      <img src="images/Question_icon.svg" alt="FAQ" />
+      <img src="Images/Question_icon.svg" alt="FAQ" />
     </button>
 
     <!-- Floating WhatsApp Button -->
