--- a/about.html
+++ b/about.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Title Bar -->
     <header class="title-bar">
       <div class="header-content">
-        <h1 class="site-title">Let it Roll</h1>
-        <p class="slogan">Let the good times roll!</p>
+        <h1 class="site-title">Let It Roll</h1>
+        <p class="ADS">Automatic Driving School</p>
+        <!-- <p class="slogan">No Gears - No Worries</p> -->
       </div>
+      <img src="Images/Logo.webp" alt="Let It Roll Logo" class="site-logo" />
       <div class="burger" id="burger">
         <div></div>
         <div></div>
@@ -23,9 +26,11 @@
       <a href="about.html">About</a>
       <a href="first_lesson.html">Your First Lesson</a>
       <a href="pricing.html">Pricing</a>
+      <a href="photo_gallery.html">Successful Students</a>
       <a href="useful.html">Useful Links</a>
       <a href="terms.html">Terms &amp; Conditions</a>
     </nav>
+
     <main>
       <section class="about">
         <h2 class="section-title" style="margin-top: 0.1rem">About Me</h2>
