Updates To Nav Etc

--- a/about.html
+++ b/about.html
@@ -32,12 +32,18 @@
     </nav>
 
     <main>
-      <section class="about">
+      <section class="about1">
         <h2 class="section-title" style="margin-top: 0.1rem">About Me</h2>
         <p style="color: #4da6ff">
           <em>Friendly - Professional - Knowledgeable</em>
         </p>
-        <br />
+
+        <img
+          src="Images/mainphoto1.jpg"
+          alt="Gary Stevens"
+          class="imgFloatRight roundedcorner"
+        />
+
         <p>
           Hi, I'm <strong>Gary Stevens</strong>, a fully qualified DVSA Approved
           Driving Instructor with over
@@ -55,6 +61,7 @@
           environment.
         </p>
         <br />
+
         <p>
           Having lived in and driven around the area all my life, I have an
           excellent knowledge of the roads, routes, and driving test centers in
@@ -63,6 +70,15 @@
           guidance every step of the way.
         </p>
         <br />
+
+        <div class="clearfix"></div>
+
+        <img
+          src="Images/mainphoto2.jpg"
+          alt="Gary's car"
+          class="imgFloatLeft roundedcorner"
+        />
+
         <p>
           My tuition vehicle is a well-maintained, modern electric car equipped
           with professional dual controls for your (and my!) safety. It features
@@ -71,13 +87,15 @@
           smooth and comfortable learning experience.
         </p>
         <br />
+
         <p>
           I’m dedicated to providing lessons that are not only effective but
           also enjoyable. Whether you’re a complete beginner or just looking to
           brush up on your skills before your test, I’m here to help you become
           a safe and capable driver.
         </p>
-        <br />
+
+        <div class="clearfix"></div>
       </section>
     </main>
 
