--- a/index.html
+++ b/index.html
@@ -89,46 +89,46 @@
   <a href="pricing.html" class="section-link-wrapper">
     <h2 class="section-title">Pricing</h2>
     <div class="services-list">
-    <div class="service-item">
-      <h3>1 Hour Lesson</h3>
-      <p>£45</p>
-    </div>
-    <div class="service-item">
-      <h3>1.5 Hour Lesson</h3>
-      <p>£60</p>
-    </div>
-    <div class="service-item">
-      <h3>2 Hour Lesson</h3>
-      <p>£80</p>
-      <p><small>(Save £10)</small></p>
-    </div>
-    <div class="service-item best-value">
-      <span class="ribbon" style="color:rgb(0, 0, 0)">&nbsp;Best Value!</span>
-      <h3>10 Hour Package</h3>
-      <p>£350</p>
-      <p><small>(5 x 2-hour lessons)<br>Save £100!</small></p>
-    </div>
-    <div class="service-item">
-      <h3>Practical Test Day Package</h3>
-      <p>£120</p>
-      <p><small>3 hours prep, travel to test centre & test support</small></p>
-    </div>
-    <div class="service-item">
-      <h3>Theory Test Support</h3>
-      <p>£30</p>
-      <p><small>Includes accompaniment to the test centre</small></p>
-    </div>
-    <div class="service-item">
-      <h3>DVSA Practical Test Booking</h3>
-      <p>£72</p>
-      <p><small>£62 test fee + £10 admin</small></p>
-    </div>
-    
-    <div class="service-item">
-      <h3>Test Rescheduling</h3>
-      <p>£15</p>
-      <p><small>One-time fee to change dates</small></p>
-    </div>
+    <div class="service-item" style="font-size: 0.9rem;">
+  <h3 style="font-size: inherit;">1 Hour Lesson</h3>
+  <p style="font-size: inherit;">£45</p>
+</div>
+<div class="service-item" style="font-size: 0.9rem;">
+  <h3 style="font-size: inherit;">1.5 Hour Lesson</h3>
+  <p style="font-size: inherit;">£60</p>
+</div>
+<div class="service-item" style="font-size: 0.9rem;">
+  <h3 style="font-size: inherit;">2 Hour Lesson</h3>
+  <p style="font-size: inherit;">£80</p>
+  <p><small style="font-size: 0.8rem;">(Save £10)</small></p>
+</div>
+<div class="service-item best-value" style="font-size: 0.9rem;">
+  <span class="ribbon" style="color:rgb(0, 0, 0)">&nbsp;Best Value!</span>
+  <h3 style="font-size: inherit;">10 Hour Package</h3>
+  <p style="font-size: inherit;">£350</p>
+  <p><small style="font-size: 0.8rem;">(5 x 2-hour lessons)<br />Save £100!</small></p>
+</div>
+<div class="service-item" style="font-size: 0.9rem;">
+  <h3 style="font-size: inherit;">Practical Test Day Package</h3>
+  <p style="font-size: inherit;">£120</p>
+  <p><small style="font-size: 0.8rem;">3 hours prep, travel to test centre &amp; test support</small></p>
+</div>
+<div class="service-item" style="font-size: 0.9rem;">
+  <h3 style="font-size: inherit;">Theory Test Support</h3>
+  <p style="font-size: inherit;">£30</p>
+  <p><small style="font-size: 0.8rem;">Includes accompaniment to the test centre</small></p>
+</div>
+<div class="service-item" style="font-size: 0.9rem;">
+  <h3 style="font-size: inherit;">DVSA Practical Test Booking</h3>
+  <p style="font-size: inherit;">£72</p>
+  <p><small style="font-size: 0.8rem;">£62 test fee + £10 admin</small></p>
+</div>
+<div class="service-item" style="font-size: 0.9rem;">
+  <h3 style="font-size: inherit;">Test Rescheduling</h3>
+  <p style="font-size: inherit;">£15</p>
+  <p><small style="font-size: 0.8rem;">One-time fee to change dates</small></p>
+</div>
+
   </div>
     
 </div>
