--- a/terms.html
+++ b/terms.html
@@ -37,7 +37,7 @@
     </nav>
     <!-- Terms & Conditions Section -->
     <main>
-      <section id="terms" class="content-section">
+      <section id="terms" class="content-section" style="color: white">
         <h2 class="section-title">Terms &amp; Conditions</h2>
 
         <article class="terms-article">
