--- a/first_lesson.html
+++ b/first_lesson.html
@@ -17,8 +17,9 @@
       <div class="header-content">
         <h1 class="site-title">Let It Roll</h1>
         <p class="ADS">Automatic Driving School</p>
-        <p class="slogan">No Gears - No Worries</p>
+        <!-- <p class="slogan">No Gears - No Worries</p> -->
       </div>
+      <img src="Images/Logo.webp" alt="Let It Roll Logo" class="site-logo" />
       <div class="burger" id="burger">
         <div></div>
         <div></div>
@@ -34,7 +35,6 @@
       <a href="useful.html">Useful Links</a>
       <a href="terms.html">Terms &amp; Conditions</a>
     </nav>
-
     <!-- First Lesson Content -->
     <main>
       <section id="first-lesson">
