Push Link back title bar

--- a/pricing.html
+++ b/pricing.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <!-- Title Bar -->
-    <header class="title-bar">
-      <div class="header-content">
-        <h1 class="site-title">Let It Roll</h1>
-        <p class="ADS">Automatic Driving School</p>
-        <!-- <p class="slogan">No Gears - No Worries</p> -->
-      </div>
+  <header class="title-bar">
+  <div class="header-content">
+    <h1 class="site-title" id="letItRoll">Let It Roll</h1>
+    <p class="ADS" id="autoSchool">Automatic Driving School</p>
+    <!-- <p class="slogan">No Gears - No Worries</p> -->
+  </div>
 <img src="Images/Logo.webp" alt="Let It Roll Logo" class="site-logo" />
       <div class="burger" id="burger">
         <div></div>
