--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
     <!-- Title Bar -->
     <header class="title-bar">
       <div class="header-content">
-        <h1 class="site-title">Let It Roll</h1>
-        <p class="ADS">Automatic Driving School</p>
+        <h1 class="site-title" id="letItRoll">Let It Roll</h1>
+        <p class="ADS" id="autoSchool">Automatic Driving School</p>
         <!-- <p class="slogan">No Gears - No Worries</p> -->
       </div>
       <img src="Images/Logo.webp" alt="Let It Roll Logo" class="site-logo" />
