--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         </p>
 
         <img
-          src="Images/mainphoto1.jpg"
+          src="Images/mainPhoto1.jpg"
           alt="Gary Stevens"
           class="imgFloatRight roundedcorner"
         />
@@ -74,7 +74,7 @@
         <div class="clearfix"></div>
 
         <img
-          src="Images/mainphoto2.jpg"
+          src="Images/mainPhoto2.jpg"
           alt="Gary's car"
           class="imgFloatLeft roundedcorner"
         />
