--- a/about.html
+++ b/about.html
@@ -42,6 +42,13 @@
           src="Images/mainPhoto1.jpg"
           alt="Gary Stevens"
           class="imgFloatRight roundedcorner"
+          style="
+            max-width: 100%;
+            height: auto;
+            display: block;
+            float: none;
+            margin: 1rem auto;
+          "
         />
 
         <p>
@@ -77,6 +84,13 @@
           src="Images/mainPhoto2.jpg"
           alt="Gary's car"
           class="imgFloatLeft roundedcorner"
+          style="
+            max-width: 100%;
+            height: auto;
+            display: block;
+            float: none;
+            margin: 1rem auto;
+          "
         />
 
         <p>
