--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
           alt="Gary Stevens"
           class="imgFloatRight roundedcorner"
           style="
-            max-width: 100%;
+            max-width: 100vw;
             height: auto;
             display: block;
             float: none;
